# -special-succotash

./: CMakeLists.txt  README.md
Main/: Main.cpp  svd.cpp  svd.h
PythonInterface/: partial_svd.cpp  partial_svd.pyx  run_svd.py
Test/: test.cpp
catch/: Makefile  catch.cbp  cmake_install.cmake
headers/: aligned_allocator.h
